--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ackee-tracker": "^5.1.0",
     "autoprefixer": "^10.4.13",
     "next": "13.0.4",
     "next-sitemap": "^3.1.32",
